--- a/src/Source/Autofac.Configuration/Autofac.Configuration.csproj
+++ b/src/Source/Autofac.Configuration/Autofac.Configuration.csproj
@@ -62,6 +62,12 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
+  <ItemGroup Condition="$(TargetFrameworkVersion)=='v2.0'">  
+    <Reference Include="linqbridge">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Resource\Library\LinqBridge\LinqBridge.dll</HintPath>
+    </Reference>
+  </ItemGroup>  
   <ItemGroup>
     <Compile Include="ComponentElement.cs" />
     <Compile Include="ComponentElementCollection.cs" />
