--- a/src/Test/Autofac.Tests.Scenarios.ScannedAssembly/Autofac.Tests.Scenarios.ScannedAssembly.csproj
+++ b/src/Test/Autofac.Tests.Scenarios.ScannedAssembly/Autofac.Tests.Scenarios.ScannedAssembly.csproj
@@ -78,9 +78,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup Condition="$(TargetFrameworkVersion)=='v2.0'">  
-    <Reference Include="linqbridge">
+    <Reference Include="RuntimeSystemBridge">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Resource\Library\LinqBridge\LinqBridge.dll</HintPath>
+      <HintPath>..\..\Resource\Library\RuntimeSystemBridge\SystemBridge20To35.dll</HintPath>
     </Reference>
   </ItemGroup>  
   <ItemGroup>
